--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina web</title>
 </head>
-<body>
+<body background="fondo gatito.jpg" style="background-repeat: no-repeat; background-size: cover;">
     <h1>informacion</h1>
+    <img src="img/descarga.webp" alt="imagen relacionada con con gatico"width="800" height="400" title="mi gato">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/xwUUvc9eUhc?autoplay=1&mute=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
 </body>
-</html>
+</html> 
